--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="assets/images/icon.jpg">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/images/icon.jpg"/>
+  <link rel="icon" type="image/png" href="assets/images/logo.jpg"/>
 
   <title>flutter_web_portfolio</title>
   <link rel="manifest" href="manifest.json">
