--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Abdul Sattar Portfolio Website.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="assets/images/icon.jpg">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/images/icon.jpg"/>
+  <link rel="icon" type="image/png" href="assets/images/logo.jpg"/>
 
   <title>flutter_web_portfolio</title>
   <link rel="manifest" href="manifest.json">
